Add dot; Minor changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,10 @@
     <com.example.adjustview.AdjustScrollView
         android:id="@+id/adjust"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="150dp"
+        app:asv_columns_color="@android:color/darker_gray"
         app:asv_columns_width="1dp"
-        app:asv_columns_color="@android:color/holo_orange_dark"
+        app:asv_dot_radius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
