--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="test">4dp</dimen>
     <dimen name="test_2">25dp</dimen>
+    <dimen name="circle">24dp</dimen>
 </resources>
